--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ django = "^5.0.7"
 pandas = "^2.2.2"
 seaborn = "^0.13.2"
 django-db = "^0.0.7"
+gmaps = "^0.9.0"
+geopandas = "^1.0.1"
+plotly = "^5.22.0"
+plotly-express = "^0.4.1"
+shp = "^1.0.2"
+pyshp = "^2.3.1"
 
 
 [build-system]
